@startuml AudioStateMachine

    '############################ States ############################

    [*] --> IDLE

    state IDLE
    state READY
    state LOADING
    state PLAYING
    state PAUSED

    '############################ Handlers ############################

    IDLE: enter / this.actions.pauseAllAudio(); this.actions.resetAllAudio(); this.actions.uiIdle(); this.actions.hideLoadingAnimation(); this.actions.initInputAdjustments(); this.actions.unlockTitleSend();
    IDLE --> READY : INPUT_CHANGED [this.actions.inputIsValid()]

    READY: enter / this.actions.uiReadyButtons();
    READY --> LOADING : SQUARE_CLICKED / this.actions.startNewStoryProcess();
    READY --> LOADING : TOGGLE_PAUSE_RESUME / this.actions.startNewStoryProcess();
    READY --> IDLE: CANCEL / this.actions.stopAndResetAllAudio();

    LOADING: enter / this.actions.showLoadingAnimation(); this.actions.uiLoadingButtons(); this.actions.lockTitleSend(); this.actions.toggleView();
    LOADING --> PLAYING : SPEECH_READY / this.actions.setUpAndStartAllAudio();
    LOADING --> PAUSED : TOGGLE_PAUSE_RESUME / this.actions.pauseAllAudio();
    LOADING --> IDLE : CANCEL / this.actions.abortProcess(); this.actions.unlockTitleSend();

    PLAYING {
    [*] --> GRID_VIEW

    GRID_VIEW --> DOTS_VIEW : VIEW_TOGGLED / applyDotsViewStyle()
    DOTS_VIEW --> GRID_VIEW : VIEW_TOGGLED / applyGridViewStyle()

    PLAYING : enter / this.actions.uiPlayingButtons(); this.actions.removeBlurr(); this.actions.greenDots()
    PLAYING --> PAUSED : TOGGLE_PAUSE_RESUME / this.actions.pauseAllAudio()
    PLAYING --> IDLE : MUSIC_OVER [this.actions.bothTracksEnded()] / this.actions.unlockTitleSend()
    PLAYING --> READY : INPUT_CHANGED [this.actions.inputIsValid()]
    PLAYING --> IDLE : CANCEL / this.actions.stopAndResetAllAudio()
    PLAYING : CHAT_HISTORY_CLICKED / this.actions.toggleTextVisibility()
    PLAYING : FROM_START_CLICKED / this.actions.pauseAllAudio(); this.actions.resetAllAudio(); this.actions.setUpAndStartAllAudio()
    PLAYING : SPEECH_OVER / this.actions.unlockTitleSend(); this.actions.toggleView()
    }


    PAUSED: enter / this.actions.uiPausedButtons(); this.actions.addBlurr();
    PAUSED --> PLAYING : TOGGLE_PAUSE_RESUME / this.actions.resumeAllAudio();
    PAUSED --> PLAYING : FROM_START_CLICKED / this.actions.resetAllAudio(); this.actions.setUpAndStartAllAudio();
    PAUSED --> READY : INPUT_CHANGED [this.actions.inputIsValid()]
    PAUSED --> IDLE: CANCEL / this.actions.setUpAndStartAllAudio();

/'! $CONFIG : toml
SmRunnerSettings.transpilerId = "JavaScript"
'/

@enduml
